compile benchmarks